# bgOpen3D

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  README.md  README_DEV_PLAN_Version1.md  README_process.md  bgTestColmap.sh  processColmap.sh  test_merge.sh
data/: match.txt  metadataCSV.txt
data/sparse/0/: cameras.txt  frames.txt  images.txt  points3D.ply  points3D.txt  project.ini
include/: point_cloud_merge.h
include/bg/: CameraIntrinsics.hpp  CandidateSelection.hpp  ColmapDatabase.hpp  ColmapModel.hpp  CoordinateConverter.hpp  FeatureExtraction.hpp  FeatureTypes.hpp  LocalizationPipeline.hpp  Matching.hpp  Open3DUtils.hpp  PnpEstimator.hpp  PoseTypes.hpp  include_CameraIntrinsics.hpp  include_ColmapDatabase.hpp  include_ColmapModel.hpp  include_CoordinateConverter.hpp  include_FeatureExtraction.hpp  include_LocalizationPipeline.hpp  include_Matching.hpp  include_Open3DUtils.hpp  include_PnpEstimator.hpp  include_PoseTypes.hpp
src/: CameraIntrinsics.cpp  ColmapDatabase.cpp  ColmapModel.cpp  CoordinateConverter.cpp  FeatureExtraction.cpp  LocalizationPipeline.cpp  Matching.cpp  Open3DUtils.cpp  PnpEstimator.cpp  main.cpp  point_cloud_ball_pivoting.cpp  point_cloud_merge.cpp  point_cloud_poisson.cpp  point_cloud_post_merge.cpp  point_cloud_post_merge_processing.cpp  point_cloud_processing.h
tests/: test_colmap_database_assets.cpp  test_colmap_database_minimal.cpp  test_colmap_model_loader_cameras_points3D_images.cpp  test_colmap_pose_priors.cpp  test_coordinate_converter.cpp  test_feature_extraction_image.cpp  test_intrinsics_undistort_to_tempdir.cpp  test_localization_pipeline_assets_db.cpp  test_matching_image_db_sparse.cpp  test_open3d_pointcloud.cpp  test_pnp_estimator_image_db_sparse.cpp
